tests/NormalTests/paczka2/big_fuzzy/53609506.err
Error in line 5: ji1lbJdzP32 S742 10,9
Error in line 7: ji1lbJdzP32 S407 71,4
Error in line 2: A600 S742 57,7
Error in line 27: XAVFySXnxL A987 2,4
Error in line 21: A600 S407 24,5
Error in line 24: eWXsHNFszQ A987 15,7
Error in line 39: XAVFySXnxL S407 32,3
Error in line 37: A600 A600 96,9
Error in line 47: ji1lbJdzP32 A600 41,39
Error in line 45: XAVFySXnxL S407 34,9
Error in line 52: XAVFySXnxL S742 93,1
Error in line 53: XAVFySXnxL S407 62,5
Error in line 54: eWXsHNFszQ S407 228,9
Error in line 60: KgrB6FX S742 86,9
Error in line 64: KgrB6FX A600 78,9
Error in line 70: XAVFySXnxL A987 44,2
Error in line 63: A600 S407 71,3
Error in line 48: ji1lbJdzP32 A600 15,5
Error in line 73: KgrB6FX A987 62,9
Error in line 86: 3Z33U S742 201,8
Error in line 91: XAVFySXnxL S742 70,2
Error in line 96: XAVFySXnxL A987 57,6
Error in line 107: KgrB6FX A600 9,9
Error in line 98: XAVFySXnxL A600 88,3
Error in line 109: XAVFySXnxL S742 81,4
Error in line 111: A600 A987 51,7
Error in line 114: A600 S742 3,9
Error in line 115: KgrB6FX S407 43,9
Error in line 120: ilMTXF5pY S742 70,2
Error in line 126: ilMTXF5pY A600 58,2
Error in line 130: 3Z33U S742 47,5
Error in line 140: XAVFySXnxL A600 32,1
Error in line 153: KgrB6FX A600 -6,2
Error in line 149: eWXsHNFszQ S407 41,2
Error in line 147: KgrB6FX A600 96,8
Error in line 145: ji1lbJdzP32 S407 54,5
Error in line 183: 3Z33U A600 69,7
Error in line 185: 3Z33U A987 22,5
Error in line 190: 3Z33U S742 94,9
Error in line 192: 3Z33U A600 83,6
Error in line 202: 3Z33U A987 62,9
Error in line 198: eWXsHNFszQ A600 5,3
Error in line 208: XAVFySXnxL A987 77,4
Error in line 212: A600 S407 70,3
Error in line 214: KgrB6FX A987 76,4
Error in line 219: KgrB6FX S407 -1,1
Error in line 232: ilMTXF5pY S742 68,09
Error in line 235: ilMTXF5pY A987 17,2
